src/renderer/src-main-window/assets/css/styles.css
@import '@renderer-shared/assets/fonts/comfortaa/stylesheet.css';

::selection {
  background: #c0c0c050;
  text-shadow: none;
}

:root[data-platform='darwin'] {
  --la-mac-titlebar-safe-left: 76px;
}

:root {
  --la-mac-titlebar-safe-left: 0px;
  --la-app-min-height: 520px;
  --la-app-min-width: 670px;
  --la-titlebar-height: 36px;
  --la-scrollbar-height: 6px;
  --la-scrollbar-width: 8px;
  --n-option-padding: 0 4px;}


[data-theme='dark'] {
  --la-background-color-primary: #1a1a1d;
}

[data-theme='light'] {
  --la-background-color-primary: #f9f9f9;
}

::-webkit-scrollbar {
  width: var(--la-scrollbar-width);
  height: var(--la-scrollbar-height);
}

::-webkit-scrollbar-thumb {
  background-color: #4c4c4c;
  border-radius: 0px;

  &:hover {
    background-color: #626262;
  }
}

#app,
html,
body,
#naive-ui-config-provider {
  height: 100%;
}

#v-binder-view-measurer {
  top: var(--la-titlebar-height) !important;
}

body {
  /* 防止一些使用绝对布局的元素溢出，产生多余的滚动条 */
  overflow: hidden;
}

body {
  user-select: none;
  line-height: normal;
}

[data-theme='dark'] {
  a {
    color: rgb(144, 198, 166);
  }

  a:visited {
    color: rgb(144, 198, 166);
  }
}

[data-theme='light'] {
  a {
    color: rgb(88, 124, 102);
  }

  a:visited {
    color: rgb(88, 124, 102);
  }
}

.n-radio {
  align-items: center;
}

.n-notification-container .n-notification .n-notification-main .n-notification-main__header {
  font-size: 13px;
  font-weight: bold;
}

.n-notification-container .n-notification .n-notification-main .n-notification-main__content {
  font-size: 13px;
  margin: 4px 0 0 0;
}

.n-notification-container .n-notification .n-notification__avatar {
  width: 20px;
  height: 20px;
  font-size: 20px;
}

.n-notification-container .n-notification.n-notification--show-avatar .n-notification-main {
  margin-left: 30px;
  width: calc(100% - 30px);
}

/* adjust for app title bar height */
.n-notification-container > .n-scrollbar > .n-scrollbar-container {
  max-height: calc(100vh - var(--la-titlebar-height)) !important;
}

[data-theme='dark'] .n-base-select-menu {
  background-color: #383838f8;
}

.n-popover-shared.popover-transition-enter-from,
.n-popover-shared.popover-transition-leave-to {
  opacity: 0;
  transform: scale(0.98);
}

.n-popover-shared.popover-transition-enter-to,
.n-popover-shared.popover-transition-leave-from {
  opacity: 1;
  transform: scale(1);
}

/*  当前无需覆盖 */
/*  .n-popover-shared.popover-transition-enter-active {
   transition:
     box-shadow 0.3s var(--n-bezier),
     background-color 0.3s var(--n-bezier),
     color 0.3s var(--n-bezier),
     opacity 0.15s var(--n-bezier-ease-out);
 } */

.n-modal.fade-in-scale-up-transition-enter-from,
.n-modal.fade-in-scale-up-transition-leave-to {
  opacity: 0;
  transform: scale(0.98);
}

.n-modal.fade-in-scale-up-transition-leave-from,
.n-modal.fade-in-scale-up-transition-enter-to {
  opacity: 1;
  transform: scale(1);
}

